--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http : ^1.2.2
   shared_preferences: ^2.5.4
   google_fonts: ^7.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
